# model-zoo

./: .gitignore  requirements.txt
EMG/: baseline_mixed_pytorch.ipynb  baseline_mixed_tf.ipynb  baseline_pytorch.ipynb
breakout/: breakout_dqn.py  dqn.py  environment.py  experience_replay.py  freeze.py  replay_buffer.py  run.py  test.py  train.py  train_mem.py
cartpole/: cartpole_ddpg.py  cartpole_dqn.py  cartpole_dqn2.py  cartpole_dqn3.py  cartpole_v0.py  cartpole_v1.py  requirements.txt
chatbot/: batch_producer.py  chatbot.py  chatting.py  configuration.py  data_preprocess.py  train.py
emotion/: data_util.py  download.sh
face-detection/: .gitignore  README.md  face_detection_data_util.py  look_twice_v0.py  train_yolo_face_v4.py  train_yolo_face_v5.py  train_yolo_face_v8.py  wider_loader.py  wider_prepare.py  yolo_face.py  yolo_face_v1.py  yolo_face_v1_batcher.py  yolo_face_v1_inference.py  yolo_face_v2.py  yolo_face_v2_inference.py  yolo_face_v3_batcher.py  yolo_face_v3_inference.py  yolo_face_v4.py  yolo_face_v4_batcher.py  yolo_face_v4_inference.py  yolo_face_v5.py  yolo_face_v5_batcher.py  yolo_face_v5_inference.py  yolo_face_v6.py  yolo_face_v6_batcher.py  yolo_face_v6_inference.py  yolo_face_v7.py  yolo_face_v7_batcher.py  yolo_face_v7_inference.py  yolo_face_v8.py  yolo_face_v8_inference.py  yolo_face_v9.py  yolo_face_v9_inference.py  yolo_freeze.py  yolo_run.py  yolo_train.py
face-mask-detection/: .gitignore  demo.py  face-mask-detection.ipynb  label_error.txt
kaggle/: .gitignore
kaggle/league-of-legends/: .gitignore  CMakeLists.txt  extra_data.py  generate_proto.sh  league_prediction.py  league_prediction_server.py  main.cc  predict.cc  predict.h  predict.ui
kaggle/league-of-legends/proto/: league.proto
kinect-pose/: .gitignore  kinect_pose.py  kinect_pose_prepare.py  kinect_pose_sequence_test.py  kinect_pose_test.py  train.py
mnist/: mnist.py  mnist_predict.py  mnist_v2_predict.py  train.py  train_mnist_v2.py
notebooks/: .gitignore  3d_image_classification.ipynb  atari_bot.ipynb  bird-species.ipynb  clip_demo.ipynb  cycle_gan.ipynb  deep dream.ipynb  hand-gesture-recogniation.ipynb  huggingface_finetune_masked_lm.ipynb  huggingface_finetune_qa.ipynb  huggingface_pipeline.ipynb  knowledge_distillation.ipynb  knowledge_distillation_pytorch.ipynb  mcu.ipynb  (+14 more)
(+239 files in other folders)
